--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@heroicons/react": "^2.2.0",
+    "@types/formidable": "^3.4.6",
+    "cloudinary": "^2.7.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.24",
+    "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
