--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.22.0",
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-table": "^8.21.3",
@@ -22,19 +25,25 @@
     "@types/formidable": "^3.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.546.0",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "next": "15.5.6",
     "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
+    "react-datepicker": "^8.8.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "sweetalert2": "^11.26.3",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -46,6 +55,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
