feat: comprehensive production-ready improvements
- Fix TypeScript and ESLint compilation errors across all files
- Implement responsive design for mobile, tablet, and laptop screens
- Always display layouts in row format instead of vertical stacking
- Adjust metric cards width and responsiveness for better UX
- Reduce navbar height by 40% total (25% + 15%) for cleaner design
- Fix hero section overlapping with navbar by adjusting padding

Production-level improvements:
- Remove unused variables and imports for cleaner code
- Implement proper production logging (development-only console.log)
- Add comprehensive error boundaries with fallback UI
- Enhance SEO with complete metadata and Open Graph tags
- Implement security headers and CSP policies
- Add caching headers for static assets and API responses
- Optimize bundle size with code splitting and tree shaking
- Add performance monitoring and database optimization utilities

Security enhancements:
- Rate limiting for API endpoints
- Input sanitization and validation
- Authentication guards for protected routes
- Security event logging for production monitoring

All changes tested with successful build and clean linting.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "type-check": "tsc --noEmit",
-    "clean": "rm -rf .next out node_modules/.cache"
+    "clean": "rm -rf .next out node_modules/.cache",
+    "optimize-db": "node scripts/optimize-database.js",
+    "analyze": "ANALYZE=true next build",
+    "perf": "next build && next start"
   },
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
