--- a/package.json
+++ b/package.json
@@ -21,19 +21,23 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
+    "@sentry/nextjs": "^10.22.0",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/redis": "^4.0.10",
     "bcryptjs": "^3.0.2",
+    "cashfree-pg-sdk-javascript": "^2.0.8",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.24",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.546.0",
     "mongoose": "^8.19.1",
@@ -41,12 +45,15 @@
     "nanoid": "^5.1.6",
     "next": "15.5.6",
     "next-auth": "^5.0.0-beta.29",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-datepicker": "^8.8.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "redis": "^5.9.0",
     "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.3.1",
+    "winston": "^3.18.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
