--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nanoid": "^5.1.6",
     "next": "15.5.6",
     "next-auth": "^5.0.0-beta.29",
+    "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-datepicker": "^8.8.0",
