--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nanoid": "^5.1.6",
     "next": "15.5.6",
     "next-auth": "^5.0.0-beta.29",
+    "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
@@ -61,6 +62,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
