--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node-cron": "^3.0.11",
     "@types/redis": "^4.0.10",
     "bcryptjs": "^3.0.2",
     "cashfree-pg-sdk-javascript": "^2.0.8",
@@ -45,6 +46,7 @@
     "nanoid": "^5.1.6",
     "next": "15.5.6",
     "next-auth": "^5.0.0-beta.29",
+    "node-cron": "^4.2.1",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
