--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean": "rm -rf .next out node_modules/.cache",
     "optimize-db": "node scripts/optimize-database.js",
     "analyze": "ANALYZE=true next build",
-    "perf": "next build && next start"
+    "perf": "next build && next start",
+    "api-docs": "echo 'API Documentation available at: http://localhost:3000/api-docs'"
   },
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
@@ -69,6 +70,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-react": "^5.30.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
