--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/redis": "^4.0.10",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.2.0",
     "cashfree-pg-sdk-javascript": "^2.0.8",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
